fix editor overflow and remove old CSS

--- a/client/less/editor.less
+++ b/client/less/editor.less
@@ -153,7 +153,6 @@
   flex-direction: column;
   font-family: Inconsolata;
   font-size: 18px;
-  // height: 100%;
   min-height: 0;
   width: 50vw;
 }
@@ -177,12 +176,6 @@
 
 .editor_md-header + div {
   min-height: 0px;
-  // width: 50vw;
-  // display: flex;
-  // flex: 1 1 auto;
-  // min-width: 50%;
-  // position: absolute;
-  // margin-left: -12px;
 }
 
 .editor_display {
@@ -194,7 +187,6 @@
 }
 
 .editor_rendered {
-  // flex: 1;
   overflow-y: auto;
   padding: 40px 20px 20px;
 
@@ -210,15 +202,10 @@
 
 .CodeMirror, .CodeMirror pre {
   line-height: 1.3em;
-  // display: flex;
-  // flex: 1 1 auto;
-  // padding-left: 20px;
-  // margin-top: 32px;
 }
 
 .CodeMirror-scroll {
   width: 100%;
-  padding-top: 30px;
   padding-left: 20px;
 }
 
